# Remnant

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  install.sh  pyproject.toml  remnant.service  requirements.txt
api/: __init__.py  main.py  mcp_endpoints.py
channels/: __init__.py  cli_channel.py  gateway.py  telegram_bot.py  websocket_channel.py  whatsapp_qr.py
config/: agents.yaml  budget.yaml  llm_providers.yaml  projects.yaml  remnant.yaml  security.yaml
core/: __init__.py  agent_graph.py  audit_log.py  budget_manager.py  config_loader.py  curator_agent.py  lane_manager.py  llm_client.py  logging_config.py  orchestrator.py  planner.py  project_manager.py  provider_registry.py  runtime.py  scheduling.py  secrets_store.py  security.py  version.py
memory/: MEMORY.md  __init__.py  chunking.py  curator_bridge.py  embedding_provider.py  global_index.py  memory_compactor.py  memory_indexer.py  memory_recorder.py  memory_retriever.py  memory_schema.py  project_index.py  redis_client.py
remnant/: __init__.py  cli.py
scripts/: bootstrap_project.py  sync_config.py
skills/: SKILL_TEMPLATE.md  skill_registry.py
tests/: test_agent_graph.py  test_agent_graph_extended.py  test_budget_manager.py  test_budget_mode.py  test_config_snapshots.py  test_gmail_tool.py  test_llm_routing.py  test_marketplace_tool.py  test_memory.py  test_runtime_static.py  test_security.py  test_security_extended.py
tools/: __init__.py  agent_zero_adapter.py  base_tool.py  code_exec_tool.py  config_tool.py  delegate_tool.py  diagnose_tool.py  gmail_tool.py  (+10 more)
(+43 files in other folders)
