[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "remnant"
version = "0.1.0"
description = "Remnant — Agentic AI framework with Redis-backed vector memory, Claude MCP, and multi-channel support"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[project.scripts]
remnant = "remnant.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["remnant*", "core*", "memory*", "skills*", "tools*", "channels*", "api*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
